--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
@@ -25,7 +24,7 @@
     </parent>
     
     <artifactId>sleepiq-api</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     
     <name>SleepIQ API</name>
     <description>Java API for SleepIQ Connected Mattress</description>
@@ -45,7 +44,8 @@
         <url>https://github.com/syphr42/libsleepiq-java/tree/master</url>
         <connection>scm:git:git://github.com/syphr42/libsleepiq-java.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/syphr42/libsleepiq-java.git</developerConnection>
-    </scm>
+      <tag>0.1.0</tag>
+  </scm>
 
     <properties>
         <compiler.source.level>1.8</compiler.source.level>
