--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     </parent>
     
     <artifactId>sleepiq-api</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0-SNAPSHOT</version>
     
     <name>SleepIQ API</name>
     <description>Java API for SleepIQ Connected Mattress</description>
@@ -44,7 +44,7 @@
         <url>https://github.com/syphr42/libsleepiq-java/tree/master</url>
         <connection>scm:git:git://github.com/syphr42/libsleepiq-java.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/syphr42/libsleepiq-java.git</developerConnection>
-      <tag>0.1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
